--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
-DB_URL="mongodb+srv://blessingjoshuas76:unthinkables@cluster0.0uyb7.mongodb.net/"
+DB_URL="mongodb+srv://blessingjoshuas76:asapproj@cluster0.0uyb7.mongodb.net/"
+
